-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0
-
None
-
macOS 13, MacBook Air, M1, using touchpad
-
-
3fd2f6fd1 (dev), b0bd7516b (6.6), 99c4a18dd (6.5)
QPdfView does not handle mouse wheel scrolling correctly (tested with MacBook Air, M1, using touchpad). This bug is however cumbersome to reproduce, sometimes scrolling with touchpad works well, sometimes not. It should not however take too long to be able to notice the strange behavior - to reproduce, open any multipage PDF and try to scroll up and down using two-finger scrolling gesture on MacBook touchpad.
I tried to intercept the wheel event in QApplication::notify() and there it is always passed for QWidgetWindow object and then for the PDF view's viewport widget. But sometimes it is passed from
{notify()}to the event handler of the viewport (then scrolling works well) and sometimes it is not passed to the viewport's event handler. The event somehow gets lost somewhere. And in that cases scrolling does not work.
UPDATE: I have just tested the same situation on normal desktop computer (Windows) with mouse and the wheel scrolling works fine. So the problem seems to be only on touchpad scrolling (for sure macOS, maybe other OSes too).
- relates to
-
QTBUG-127006 Touch event is stolen from QPdfVIew (or more generally QAbstractScrollArea?) under certain environment on Windows
-
- Closed
-