Don't use QScroller in QPdfView

This should be up to applications if desired, not a built-in feature.
For example, qtdoc/examples/demos/documentviewer installs its own
QScroller. Perhaps QScroller should only handle touch gestures, to
avoid interfering with built-in QAbstractScrollArea behavior.

Fixes: QTBUG-113981
Change-Id: I5fdeb362d16e00f1ae656f7529450d5f5f6ffe83
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 3fd2f6fd1cf339e43d70dcc02f3bf221b7e73629)