src/pdfwidgets/qpdfview.cpp
@@ -14,7 +14,6 @@
 #include <QPdfPageNavigator>
 #include <QScreen>
 #include <QScrollBar>
-#include <QScroller>
 
 QT_BEGIN_NAMESPACE
 
@@ -280,8 +279,6 @@ QPdfView::QPdfView(QWidget *parent)
 
     verticalScrollBar()->setSingleStep(20);
     horizontalScrollBar()->setSingleStep(20);
-
-    QScroller::grabGesture(this);
 
     d->calculateViewport();
 }
